Bug 1480275: Handle nested use shadow trees properly when the ID target changes. r=heycam

We end up with three <svg:use> elements to update (lol), because the target (#c)
changes, since we create another element with that ID in the document via
outerHTML.

Differential Revision: https://phabricator.services.mozilla.com/D2650